# event_manager

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  DevLog  Makefile  README.md  compile.sh  configure  errors.hpp  event_manager.cpp  event_manager.hpp  event_manager_tests.cpp  experiment.cpp  format.sh  gcovr.cfg  main.cpp  meson.build  run_everything.sh  run_example.sh  statx  statx_test.cpp  test  test.cpp  test.txt
.github/workflows/: ci.yml
communication/: README.md  communication_channel.hpp  communication_tests.cpp  communication_types.hpp  request_types.hpp  response_packs.hpp  response_types.hpp
coroutine/: awaiter.hpp  coroutine_tests.cpp  io_awaitables.hpp  task.cpp  task.hpp
event_loop/: README.md  core.cpp  event_loop_example.cpp  event_loop_tests.cpp  event_manager.cpp  event_manager.hpp  io_awaitables.hpp  io_ops.cpp  parameter_packs.cpp  parameter_packs.hpp  request_data.hpp
example/: compile.sh  example  example.cpp  meson.build
examples/: event_loop_example.cpp  http_example.cpp  meson.build  polling_example.cpp  readme_example.cpp  simple_coro_example.cpp
header/: awaitable_types.hpp  event_manager_metadata.hpp  events_enum.hpp  utility.hpp
scripts/: compile.sh  run_everything.sh  run_example.sh  run_tests.sh  test_and_generate_coverage.sh
src/: awaitables.cpp  core.cpp  event_loop.cpp  event_manager.cpp  pfd_methods.cpp  queue_ops.cpp  submit_ops.cpp
tests/: communication_tests.cpp  event_loop_tests.cpp  event_manager_tests.cpp  meson.build  na_tests.cpp  run_tests.sh  test_functions.hpp
